# icalendar-data

./: .gitattributes  .gitignore  Dockerfile  docker-build.bat  docker-build.sh  docker-pull.bat  docker-run.bat  docker-run.sh  generate.py  pyproject.toml  readme.adoc
competitions/: .competitions_matches_2018-19.yml.swp  competitions_matches_2018-19.yml  competitions_matches_2019-20.yml  competitions_teams.yml
fallsbelfast/: fallsbelfast1_matches_2022-23.yml  fallsbelfast_matches_2018-19.yml  fallsbelfast_matches_2019-20.yml  fallsbelfast_matches_2022-23.yml  fallsbelfast_teams.yml
fallsbelfast2/: fallsbelfast2_matches_2022-23.yml  fallsbelfast2_teams.yml
fallscompannette/: fallscompannette_matches_2019.yml
fallscompme/: fallscompme_matches_2019.yml  fallscompme_teams.yml
fallsindoor/: fallsindoor_matches_2017-18.json  fallsindoor_matches_2018-19.json  fallsindoor_matches_2018-19.yml  fallsindoor_matches_2019-20.yml  fallsindoor_teams.json  fallsindoor_teams.yml
fallsindoorb/: fallsindoorb_matches_2022-23.yml
fallsmidweeka/: fallsmidweeka_matches_2018.json  fallsmidweeka_matches_2019.yml  fallsmidweeka_matches_2021.yml  fallsmidweeka_matches_2022.yml  fallsmidweeka_teams.json  fallsmidweeka_teams.yml
fallsmidweekb/: fallsmidweekb_matches_2022.yml  fallsmidweekb_teams.yml
fallsnipgl/: fallsnipgl_matches_2018.json  fallsnipgl_matches_2019.yml  fallsnipgl_teams.json  fallsnipgl_teams.yml
fallsoutdoor/: fallsoutdoor_teams.yml
fallsoutdoora/: fallsoutdoora_matches_2018.json  fallsoutdoora_matches_2019.yml  fallsoutdoora_matches_2022.yml  matches.txt  (+2 more)
(+26 files in other folders)
