[tool.poetry]
name = "icalendar-data"
version = "0.1.0"
description = ""
authors = ["Gary McWilliams <garymcwilliams@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
envparse = "^0.2.0"

[tool.poetry.dev-dependencies]
black = "^21.5b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
